--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>
+        <div class="logo">
+            <img src="" alt="Logo" width="30px" height="30px">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Other</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
