[UPD] Set structure section 1 and 2

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="" alt="Logo" width="30px" height="30px">
+            <img src="/assets//img/logo.png" alt="Logo" width="37px" height="21px">
         </div>
         <nav>
             <ul>
@@ -21,5 +21,34 @@
             </ul>
         </nav>
     </header>
+    <main class="main">
+        <section class="main__title">
+            <div class="title">
+                I’m Arnau Ros, a graphic designer & content creator based in Barcelona. Available for freelance & collaborations. 
+            </div>
+            <div class="img">
+                <img src="/assets/img/eagle.png" alt="Eagle">
+            </div>
+        </section>
+        <section class="main__title">
+            <h1>Projects</h1>
+            <hr>
+            <div class="gallery">
+                <figure>
+                    <figcaption>01 Example</figcaption>
+                    <img src="/assets/img/example1.png" alt="Example 1">
+                </figure>
+                <figure>
+                    <figcaption>02 Example</figcaption>
+                    <img src="/assets/img/example2.png" alt="Example 2">
+                </figure>
+                <figure>
+                    <figcaption>03 Example</figcaption>
+                    <img src="/assets/img/example3.png" alt="Example 3">
+                </figure>
+                <i></i>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
