--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <img src="/assets/img/eagle.png" alt="Eagle">
             </div>
         </section>
-        <section class="main__title">
+        <section class="main__projects">
             <h1>Projects</h1>
             <hr>
             <div class="gallery">
@@ -47,6 +47,19 @@
                     <img src="/assets/img/example3.png" alt="Example 3">
                 </figure>
                 <i></i>
+            </div>
+        </section>
+        <section class="main__creations">
+            <h1>Content Creation</h1>
+            <hr>
+            <div class="content">
+                <article class="content__info">
+                    <p>Join my YouTube channel where I show my design thinking, my process, and my personality. The channel has helped over 200K designers become more proficient in the tools I use everyday, Figma, Webflow & more. Join the journey!</p>
+                    <a href="#">Get in contact about a sponsorship </a>
+                </article>
+                <article class="content__video">
+                    <video src=""></video>
+                </article>
             </div>
         </section>
     </main>
