[UPD] Structure HTML about me

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
         </section>
         <section class="main__projects">
-            <h1>Projects</h1>
+            <h3>Projects</h3>
             <hr>
             <div class="gallery">
                 <figure>
@@ -50,16 +50,65 @@
             </div>
         </section>
         <section class="main__creations">
-            <h1>Content Creation</h1>
+            <h3>Content Creation</h3>
             <hr>
             <div class="content">
                 <article class="content__info">
                     <p>Join my YouTube channel where I show my design thinking, my process, and my personality. The channel has helped over 200K designers become more proficient in the tools I use everyday, Figma, Webflow & more. Join the journey!</p>
-                    <a href="#">Get in contact about a sponsorship </a>
+                    <a href="#">Get in contact about a sponsorship <i class="down-curve-arrow"></i></a>
                 </article>
                 <article class="content__video">
                     <video src=""></video>
                 </article>
+            </div>
+        </section>
+        <section class="main__about-me">
+            <h3>About Me</h3>
+            <hr>
+            <div class="about-content">
+                <div class="content__info">
+                    I'm a product designer working on various projects on a wide range of clients. My skillset lies on creating branding packages & websites to deliver the full online experience for new and also veteran businesses.You can often find me creating videos about design over on YouTube, or sharing my thoughts on my podcast, Dialogue With Designers . I'm passionate about giving back and teaching what I know to the next generation of designers.‍
+                </div>
+                <div class="content__collapse">
+                    <h4>Your one stop shop for:</h4>
+                    <div class="collapse">
+                        <div class="collapse-title">
+                            <i class="collapse-title__number"></i>
+                            <p>Branding/ Logo</p>
+                            <i class="collpase-open-arrow"></i>
+                        </div>
+                        <div class="collapse-content">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi sed pulvinar rutrum tempor. Etiam duis massa elementum, etiam cras tristique. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi sed pulvinar rutrum tempor. Etiam duis massa elem Starting at € 2,450
+                        </div>
+                    </div>
+                    <div class="collapse">
+                        <div class="collapse-title">
+                            <i class="collapse-title__number"></i>
+                            <p>Packaging</p>
+                            <i class="collpase-open-arrow"></i>
+                        </div>
+                    </div>
+                    <div class="collapse">
+                        <div class="collapse-title">
+                            <i class="collapse-title__number"></i>
+                            <p>Websites</p>
+                            <i class="collpase-open-arrow"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="about-links">
+                <ul>
+                    <li>Illustrator</li>
+                    <li>Webflow</li>
+                    <li>Figma</li>
+                    <li>Indesign</li>
+                    <li>Premiere Pro</li>
+                    <li>Cinema 4D</li>
+                    <li>Sketch</li>
+                    <li>Photoshop</li>
+                    <li>Illustrator</li>
+                </ul>
             </div>
         </section>
     </main>
