[UPD] Add section clients and form

--- a/index.html
+++ b/index.html
@@ -111,6 +111,49 @@
                 </ul>
             </div>
         </section>
+        <section class="main__clients">
+            <h3>What Clients Say</h3>
+            <hr>
+            <div class="content">
+                <div class="arrow"></div>
+                <div class="experiencie">
+                    <p>“I rehired Arnau to do some additional design work for my private label brand. Again, he was creative and efficient in bringing my ideas to fruition. Thanks Arnau”</p>
+                    <p>- Ronald Weasley CEO</p>
+                </div>
+                <div class="arrow"></div>
+            </div>
+        </section>
+        <section class="main__form">
+            <h3>Say Hello</h3>
+            <hr>
+            <div class="content">
+                <div class="subtitle">
+                    <p>Looking to start a new project or just want to say hi? Send me an email and I’ll do my best to reply within 24 hrs!</p>
+                    <br>
+                    <p>If contact forms aren’t your thing... send me an email at hello@arnau.design</p>
+                </div>
+                <div class="form">
+                    <form action="" method="post">
+                        <label for="name">
+                            <input type="text" name="name" placeholder="First Name">
+                        </label>
+                        <label for="lastName">
+                            <input type="text" name="lastName" placeholder="Last Name">
+                        </label>
+                        <label for="inquiry">
+                            <input type="text" name="inquiry" placeholder="Collab/Client">
+                        </label>
+                        <label for="email">
+                            <input type="text" name="email" placeholder="Email">
+                        </label>
+                        <label for="message">
+                            <textarea name="message" id="message" cols="30" rows="10" placeholder="Hello..."></textarea>
+                        </label>
+                        <input type="submit" value="send">
+                    </form>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
