[UPD] Finish structure of blogs ans footer

--- a/index.html
+++ b/index.html
@@ -154,6 +154,44 @@
                 </div>
             </div>
         </section>
+        <section class="main__blogs">
+            <div class="blog">
+                <h6>The ULTIMATE Figma UI Kit (Tailwind-Figma)</h6>
+                <span>24.09.21</span>
+                <a href="#">See Now <i></i></a>
+            </div>
+            <div class="blog">
+                <h6>The ULTIMATE Figma UI Kit (Tailwind-Figma)</h6>
+                <span>24.09.21</span>
+                <a href="#">See Now <i></i></a>
+            </div>
+            <div class="blog">
+                <h6>The ULTIMATE Figma UI Kit (Tailwind-Figma)</h6>
+                <span>24.09.21</span>
+                <a href="#">See Now <i></i></a>
+            </div>
+        </section>
+        <section class="main__newsletter">
+            <h5>Join the Newsletter!</h5>
+            <p>You’ll receive an email every once in a while about new products, courses, and videos!</p>
+            <form>
+                <input type="email" placeholder="name@example.com">
+                <button><i></i></button>
+            </form>
+            <span>We’ll never share your details. See our Privacy Policy</span>
+        </section>
     </main>
+    <hr>
+    <footer>
+        <div class="logo">
+            <img src="/assets//img/logo.png" alt="Logo" width="37px" height="21px">
+        </div>
+        <p>&copy;2023PabloskyDev</p>
+        <div class="social-media">
+            <button>facebook</button>
+            <button>twitter</button>
+            <button>instagram</button>
+        </div>
+    </footer>
 </body>
 </html>
