[UPD] Upgrade title main page

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
     <main class="main">
         <section class="main__title">
             <div class="title">
-                I’m Arnau Ros, a graphic designer & content creator based in Barcelona. Available for freelance & collaborations. 
+                <p>
+                    I’m Arnau Ros, a graphic designer & content creator based in Barcelona. <br>Available for freelance & collaborations. 
+                </p>
             </div>
             <div class="img">
-                <img src="/assets/img/eagle.png" alt="Eagle">
+                <img src="/assets/img/eagle.png" alt="Eagle" width="406px" height="364px">
             </div>
         </section>
         <section class="main__projects">
