[UPD] Add padding bottom

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <main class="main">
-        <section class="main__title">
+        <section class="main__title pb-2">
             <div class="title">
                 <p>
                     I’m Arnau Ros, a graphic designer & content creator based in Barcelona. <br>Available for freelance & collaborations. 
