--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
+    <link rel="stylesheet" href="/css/spacing.css">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
@@ -22,7 +23,7 @@
         </nav>
     </header>
     <main class="main">
-        <section class="main__title pb-2">
+        <section class="main__title pb-4 mb-4">
             <div class="title">
                 <p>
                     I’m Arnau Ros, a graphic designer & content creator based in Barcelona. <br>Available for freelance & collaborations. 
