[UPD] Space between sections

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <img src="/assets/img/eagle.png" alt="Eagle" width="406px" height="364px">
             </div>
         </section>
-        <section class="main__projects">
+        <section class="main__projects pb-4 mb-4">
             <h3>Projects</h3>
             <hr>
             <div class="gallery">
@@ -52,7 +52,7 @@
                 <i></i>
             </div>
         </section>
-        <section class="main__creations">
+        <section class="main__creations pb-4 mb-4">
             <h3>Content Creation</h3>
             <hr>
             <div class="content">
@@ -65,7 +65,7 @@
                 </article>
             </div>
         </section>
-        <section class="main__about-me">
+        <section class="main__about-me pb-4 mb-4">
             <h3>About Me</h3>
             <hr>
             <div class="about-content">
@@ -114,7 +114,7 @@
                 </ul>
             </div>
         </section>
-        <section class="main__clients">
+        <section class="main__clients pb-4 mb-4">
             <h3>What Clients Say</h3>
             <hr>
             <div class="content">
@@ -126,7 +126,7 @@
                 <div class="arrow"></div>
             </div>
         </section>
-        <section class="main__form">
+        <section class="main__form pb-4 mb-4">
             <h3>Say Hello</h3>
             <hr>
             <div class="content">
@@ -157,7 +157,7 @@
                 </div>
             </div>
         </section>
-        <section class="main__blogs">
+        <section class="main__blogs pb-4 mb-4">
             <div class="blog">
                 <h6>The ULTIMATE Figma UI Kit (Tailwind-Figma)</h6>
                 <span>24.09.21</span>
@@ -174,7 +174,7 @@
                 <a href="#">See Now <i></i></a>
             </div>
         </section>
-        <section class="main__newsletter">
+        <section class="main__newsletter pb-4 mb-4">
             <h5>Join the Newsletter!</h5>
             <p>You’ll receive an email every once in a while about new products, courses, and videos!</p>
             <form>
