[UPD] Add title sections styles

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
         <section class="main__projects pb-4 mb-4">
             <h3>Projects</h3>
-            <hr>
+            <hr class="mt-1 mb-4">
             <div class="gallery">
                 <figure>
                     <figcaption>01 Example</figcaption>
@@ -54,7 +54,7 @@
         </section>
         <section class="main__creations pb-4 mb-4">
             <h3>Content Creation</h3>
-            <hr>
+            <hr class="mt-1">
             <div class="content">
                 <article class="content__info">
                     <p>Join my YouTube channel where I show my design thinking, my process, and my personality. The channel has helped over 200K designers become more proficient in the tools I use everyday, Figma, Webflow & more. Join the journey!</p>
@@ -67,7 +67,7 @@
         </section>
         <section class="main__about-me pb-4 mb-4">
             <h3>About Me</h3>
-            <hr>
+            <hr class="mt-1">
             <div class="about-content">
                 <div class="content__info">
                     I'm a product designer working on various projects on a wide range of clients. My skillset lies on creating branding packages & websites to deliver the full online experience for new and also veteran businesses.You can often find me creating videos about design over on YouTube, or sharing my thoughts on my podcast, Dialogue With Designers . I'm passionate about giving back and teaching what I know to the next generation of designers.‍
@@ -116,7 +116,7 @@
         </section>
         <section class="main__clients pb-4 mb-4">
             <h3>What Clients Say</h3>
-            <hr>
+            <hr class="mt-1">
             <div class="content">
                 <div class="arrow"></div>
                 <div class="experiencie">
@@ -128,7 +128,7 @@
         </section>
         <section class="main__form pb-4 mb-4">
             <h3>Say Hello</h3>
-            <hr>
+            <hr class="mt-1">
             <div class="content">
                 <div class="subtitle">
                     <p>Looking to start a new project or just want to say hi? Send me an email and I’ll do my best to reply within 24 hrs!</p>
