[UPD] Set Gallery in Projects

--- a/index.html
+++ b/index.html
@@ -37,19 +37,18 @@
             <h3>Projects</h3>
             <hr class="mt-1 mb-4">
             <div class="gallery">
-                <figure>
-                    <figcaption>01 Example</figcaption>
+                <figure class="mr-1">
+                    <figcaption class="pb-1">01 Example</figcaption>
                     <img src="/assets/img/example1.png" alt="Example 1">
                 </figure>
-                <figure>
-                    <figcaption>02 Example</figcaption>
+                <figure class="mr-1">
+                    <figcaption class="pb-1">02 Example</figcaption>
                     <img src="/assets/img/example2.png" alt="Example 2">
                 </figure>
-                <figure>
-                    <figcaption>03 Example</figcaption>
+                <figure class="mr-1">
+                    <figcaption class="pb-1">03 Example</figcaption>
                     <img src="/assets/img/example3.png" alt="Example 3">
                 </figure>
-                <i></i>
             </div>
         </section>
         <section class="main__creations pb-4 mb-4">
