--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </div>
                 </div>
             </div>
-            <div class="about-links">
+            <div class="about-links mt-4">
                 <ul>
                     <li>Illustrator</li>
                     <li>Webflow</li>
