[UPD] organice first sections

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="/css/spacing.css">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
@@ -38,17 +39,22 @@
             <hr class="mt-1 mb-4">
             <div class="gallery">
                 <figure class="mr-1">
-                    <figcaption class="pb-1">01 Example</figcaption>
+                    <figcaption class="pb-1 bold-500">01 Example</figcaption>
                     <img src="/assets/img/example1.png" alt="Example 1">
                 </figure>
                 <figure class="mr-1">
-                    <figcaption class="pb-1">02 Example</figcaption>
+                    <figcaption class="pb-1 bold-500">02 Example</figcaption>
                     <img src="/assets/img/example2.png" alt="Example 2">
                 </figure>
                 <figure class="mr-1">
-                    <figcaption class="pb-1">03 Example</figcaption>
+                    <figcaption class="pb-1 bold-500">03 Example</figcaption>
                     <img src="/assets/img/example3.png" alt="Example 3">
                 </figure>
+                <div class="plus">
+                    <span class="material-symbols-outlined">
+                        add_circle
+                    </span>
+                </div>
             </div>
         </section>
         <section class="main__creations pb-4 mb-4">
